# memory-network

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  CONTEXT.md  README.md  package.json  pyproject.toml  target.txt
.claude/: CLAUDE.md  settings.json
.sandcastle/: .env.example  Dockerfile  README.md  interactive.ts  main.ts  prompt.md  tsconfig.json
code_index/: __init__.py  __main__.py  agent_activity.py  agent_collaboration.py  agent_providers.py  agent_sessions.py  agent_swarm.py  cli.py  cli_parser.py  config.py  db.py  db_core.py  db_router.py  git_meta.py  hashing.py  ignore.py  index_launcher.py  lease_manager.py  locking.py  pipeline.py  relation_resolver.py  retrieval.py  retrieval_eval.py  run_lifecycle.py  run_orchestrator.py  scanner.py  schema.sql  scip_import.py  scopes.py  symbols.py  task_gate.py  test_edges.py
docs/: agent-plugin-assessment.md  agent-provider-adapters.md  claude-code.md  code-index-spec.md  graph-agent-companion-prd.md  long_context.md
plans/: code-index-repo-plan.md  codex-rescue-bench-fixes.md  codex-rescue-report.md  codex-rescue-tasks.md  external-code-intelligence-systems.md  graph-agent-claude-plan.md  graph-agent-companion-hardening-plan.md  openclaw-network-control-plane-plan.md  openclaw-telegram-host-claim-routing-issues.md  pressure-test-fastapi-2026-04-24.md  slice-10-adversarial-review-fixes.md  slice-8-llm-understanding.md  slice-9-codex-followups.md
scripts/: bootstrap_openclaw_telegram.py  check_openclaw_nats_preflight.py  install_openclaw_m1_launchd.py  install_openclaw_m1_systemd.py  sandcastle.ps1  (+2 more)
(+288 files in other folders)
